2004-08-11 Alain Magloire

	Fix for PR 6991
	* src/org/eclipse/cdt/debug/mi/core/RxThread.java

2004-07-22 Alain Magloire

	Fix for 70688
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-07-12 Alain Magloire

	Patch from Stefan Bylund, to permit backend
	to show names of thread.
	PR 69711

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java

	* mi/org/eclipse/cdt/debug/mi/core/mi/core/output/MIInfoThreadsInfo.java
	
2004-06-29 Alain Magloire

	When selecting threads gdb can reset the current
	stack frame on us.  We should be aware of it and reset.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/mode/Target.java

2004-06-24 Alain Magloire

	Fix 68226
	* cdi/org/eclipse/cdt/debug/mic/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mic/core/cdi/Configuration.java
	* cdi/org/eclipse/cdt/debug/mic/core/cdi/SoourceManager.java
	
2004-06-22 Alain Magloire

	Fix PR 68176
	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinMIEnvironmentCD.java

2004-06-09 Alain Magloire
	Fix for PR 66338
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Condition.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java

2004-06-09 Alain Magloire

	Keep the breakpoint disable when doing
	deffered breakpoint installation.

	* cdt/org/eclpse/cdt/debug/mi/core/cdi/EventManager.java

2004-06-08 Alain Magloire

	Fix for PR 65077

	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinCommandFactory.java
	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinMIEnvironmentCD.jav
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBDebugger.java

2004-06-02 Mikhail Khodjaiants

	Moved externalized strings to the right property file.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/CdiResources.properties
	* src/org/eclipse/cdt/debug/mi/core/MIPluginResources.properties

2004-0602 Alain Magloire
