@@ -1,3 +1,8 @@
+2004-08-14 Alain Magloire
+
+	Fix for 71992.
+	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java
+
 2004-08-11 Alain Magloire
 
 	Fix for PR 6991
